<resources>
    <string name="app_name">Star2D.E</string>
    <string name="projects">Projects</string>
    <string name="tutorials">Tutorials</string>
    <string name="tutorial">Tutorial</string>
    <string name="community">Community</string>
    <string name="close">Close</string>
	<string name="download">Download</string>
	<string name="support">
		As you know..., any project need a support to continue, this engine made by simple devoloper, simple tools, limited internet, limited time, so please to help me to continue in devoloping it, keep good review to it in the page, and share with your friends, and don\'t forget the Financial support , even 1$ just to give me spirit and prove that you are interesting and you want to support the engine.\n
		thanks for reading this...≈≈\n
		happy coding...
	</string>
	<string name="install">install</string>
	<string name="cancel">Cancel</string>
	<string name="box_body">Box Body</string>
	<string name="custom_body">Custom Body (⭐)</string>
	<string name="circle_body">Circular Body</string>
	<string name="text_item">Text Item</string>
	<string name="joystick_item">Joystick Item</string>
	<string name="progress_item">Progress Item</string>
	<string name="your_images">Your Images</string>
	<string name="result">Result</string>
	<string name="frame_duration">Frame Duration (ms)</string>
	<string name="animation_pictures">Animation Pictures</string>
	<string name="delete">Delete</string>
	<string name="copy">Copy</string>
	<string name="code_editor">Code Editor</string>
	<string name="saved">Saved...!!!</string>
	<string name="save">Save</string>
	<string name="choose_color">Choose Color</string>
	<string name="alpha">Alpha</string>
	<string name="select">Select</string>
	<string name="create_project">Create Project</string>
	<string name="import_text">Import</string>
	<string name="create">Create</string>
	<string name="error_send">Error...., please copy it and send it to me to improve the app</string>
	<string name="contact">Contact</string>
	<string name="icon_tap">Icon (Tap to choose)</string>
	<string name="package_name">Package Name</string>
	<string name="game_name">Game Name</string>
	<string name="version_code">Version Code</string>
	<string name="version_name">Version Name</string>
	<string name="portrait_game">Portrait Game</string>
	<string name="export">Export</string>
	<string name="there_is_no_files">There\'s no files here</string>
	<string name="click_plus_to_add">Click (+) To add Files</string>
	<string name="give_perm">give the the necessary permissions...</string>
	<string name="ok">OK</string>
	<string name="add_joint">Add Joint</string>
	<string name="please_wait">Please wait...</string>
	<string name="restore">Restore</string>
	<string name="settings">Settings</string>
	<string name="new_project">New Project</string>
	<string name="sections_list">Sections List</string>
	<string name="pro_editor_enable">Enable Professional Code Editor (Android 8+)</string>
	<string name="d8_enable">Enable D8 for Dexing jar Files</string>
	<string name="language">English</string>
	<string name="lang">en</string>
	<string name="restart_the_app">Restart the app to change the language</string>
	<string name="night_mode">Night Mode</string>
	<string name="edit">Edit</string>
	<string name="translation_by">Powered By Star4Droid</string>
	<string name="translator_url"></string>
	<string name="compiler">Compiler</string>
	<string name="enter_value">Enter Value</string>
	<string name="point_light">Point Light</string>
	<string name="directional_light">Directional Light</string>
	<string name="cone_light">Cone Light</string>
	<string name="enable_blur" translatable="false">Enable Blur</string>
	<string name="blur_number" translatable="false">Blur Number</string>
	<string name="culling" translatable="false">Enable Culling</string>
	<string name="gamma_correction" translatable="false">Gamma Correction</string>
	<string name="ambient_light" translatable="false">Ambient Light</string>
	<string name="use_diffuse_light" translatable="false">Use Diffuse Light</string>
	<string name="shadows" translatable="false">Enable Shadows</string>
	<string name="light_settings">Light Settings</string>
	<string name="add_point">Add Point</string>
	<string name="delete_the_point">Delete The Point</string>
	<string name="update_needed">Download The New Update</string>
	<string name="update">Update</string>
</resources>
