<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:background="@color/button_background"
		>
	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:padding="6dp"
		>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:text="@string/icon_tap"
		android:textColor="@color/text_color"
		/>
	<ImageView
		android:layout_height="60dp"
		android:layout_width="60dp"
		android:id="@+id/icon"
		android:src="@drawable/icon"/>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:text="@string/package_name"
		android:textColor="@color/text_color"
		/>
	<com.google.android.material.textfield.TextInputEditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="com.project.MyGame"
		android:hint="@string/package_name"
		android:focusable="true"
		android:maxLines="1"
		android:imeOptions="actionNext"
		android:layout_marginBottom="8dp"
		android:id="@+id/package_name"/>
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:text="@string/game_name"
	android:textColor="@color/text_color"
	/>
	<com.google.android.material.textfield.TextInputEditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="My Game"
		android:hint="@string/game_name"
		android:focusable="true"
		android:maxLines="1"
		android:imeOptions="actionNext"
		android:layout_marginBottom="8dp"
		android:id="@+id/name"/>
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:text="@string/version_code"
	android:textColor="@color/text_color"
	/>
	<com.google.android.material.textfield.TextInputEditText
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="1"
	android:hint="@string/version_code"
	android:focusable="true"
	android:inputType="numberSigned"
	android:maxLines="1"
	android:imeOptions="actionNext"
	android:layout_marginBottom="8dp"
	android:id="@+id/version"/>
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:text="@string/version_name"
	android:textColor="@color/text_color"
	/>
	<com.google.android.material.textfield.TextInputEditText
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="1.0"
	android:hint="@string/version_name"
	android:focusable="true"
	android:maxLines="1"
	android:imeOptions="actionDone"
	android:layout_marginBottom="8dp"
	android:id="@+id/version_name"/>
	<androidx.appcompat.widget.AppCompatCheckBox
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/portrait_game"
		android:textColor="@color/text_color"
		android:layout_marginBottom="5dp"
		android:id="@+id/portrait"/>
	<com.google.android.material.button.MaterialButton
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/export"
		app:cornerRadius="5dp"
		android:id="@+id/export"/>
	</LinearLayout>
	</ScrollView>
</LinearLayout>