<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		>
	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:padding="6dp"
		android:id="@+id/linear"
		>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:text="@string/blur_number"
		android:textColor="@color/text_color"
		android:background="#000000"
		/>
	<com.google.android.material.textfield.TextInputEditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="1"
		android:gravity="center"
		android:hint="@string/blur_number"
		android:focusable="true"
		android:maxLines="1"
		android:inputType="numberSigned"
		android:imeOptions="actionDone"
		android:layout_marginBottom="8dp"
		android:id="@+id/blur_num"/>
	
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:text="@string/enable_blur"
	android:visibility="gone"
	android:background="#000000"
	android:textColor="@color/text_color"
	/>
	<androidx.appcompat.widget.AppCompatCheckBox
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/enable_blur"
		android:checked="true"
		android:textColor="@color/text_color"
		android:layout_marginBottom="8dp"
		android:id="@+id/enable_blur"/>
	
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:background="#000000"
	android:visibility="gone"
	android:text="@string/use_diffuse_light"
	android:textColor="@color/text_color"
	/>
	<androidx.appcompat.widget.AppCompatCheckBox
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/use_diffuse_light"
		android:textColor="@color/text_color"
		android:layout_marginBottom="8dp"
		android:id="@+id/diffuse"/>
	
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:background="#000000"
	android:visibility="gone"
	android:text="@string/culling"
	android:textColor="@color/text_color"
	/>
	<androidx.appcompat.widget.AppCompatCheckBox
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="@string/culling"
	android:checked="true"
	android:textColor="@color/text_color"
	android:layout_marginBottom="8dp"
	android:id="@+id/culling"/>
	
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:background="#000000"
	android:visibility="gone"
	android:text="@string/gamma_correction"
	android:textColor="@color/text_color"
	/>
	<androidx.appcompat.widget.AppCompatCheckBox
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="@string/gamma_correction"
	android:textColor="@color/text_color"
	android:layout_marginBottom="8dp"
	android:id="@+id/gamma"/>
	
	<TextView
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:gravity="center"
	android:text="@string/shadows"
	android:background="#000000"
	android:visibility="gone"
	android:textColor="@color/text_color"
	/>
	<androidx.appcompat.widget.AppCompatCheckBox
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:text="@string/shadows"
	android:checked="true"
	android:textColor="@color/text_color"
	android:layout_marginBottom="8dp"
	android:id="@+id/shadows"/>
	
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:textColor="@color/text_color"
		android:background="#000000"
		android:text="@string/ambient_light"
		/>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@color/white"
		android:padding="2dp"
		>
	<LinearLayout
		android:layout_height="100dp"
		android:layout_width="match_parent"
		android:id="@+id/ambient"
		android:background="#FFFFFF"
		/>
	</LinearLayout>
	
	<com.google.android.material.button.MaterialButton
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/save"
		app:cornerRadius="5dp"
		android:id="@+id/save"/>
	</LinearLayout>
	</ScrollView>
</LinearLayout>