<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="600dp"
    android:orientation="horizontal">
	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:padding="12dp"
		>
		<com.star4droid.star2d.Views.CustomColliderView
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:background="#333333"
			android:src="@drawable/icon"
			android:id="@+id/collider_view"
			/>
	</LinearLayout>
	<ScrollView
		android:layout_height="match_parent"
		android:layout_width="wrap_content"
		android:background="#252526"
		>
		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:id="@+id/points_linear"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingTop="12dp"
			>
			
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="wrap_content"
		android:minWidth="50dp"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:padding="4dp"
		android:background="#252526"
		>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:padding="9dp"
			android:layout_marginTop="9dp"
			android:text="@string/add_point"
			android:id="@+id/add_point"
			android:textStyle="bold"
			android:background="#333333"
			/>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:padding="9dp"
			android:layout_marginTop="9dp"
			android:text="@string/delete_the_point"
			android:id="@+id/delete_point"
			android:textStyle="bold"
			android:background="#333333"
			/>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:padding="9dp"
			android:layout_marginTop="9dp"
			android:id="@+id/save"
			android:text="@string/save"
			android:textStyle="bold"
			android:background="#333333"
			/>
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:padding="9dp"
			android:layout_marginTop="9dp"
			android:id="@+id/cancel"
			android:text="@string/cancel"
			android:textStyle="bold"
			android:background="#333333"
			/>
	</LinearLayout>
</LinearLayout>