<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:id="@+id/auto_completion"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/pro_editor_enable"
    />
    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:id="@+id/d8"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:text="@string/d8_enable"
    />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
    >
        <ImageView
            android:layout_height="35dp"
            android:layout_width="35dp"
            android:src="@drawable/lang"
            app:tint="@color/text_color" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/night_mode"
        android:id="@+id/night_mode"
        android:enabled="false"
        android:checked="true"
        android:textColor="@color/text_color"
    />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:textDirection="locale"
    >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/compiler"
        />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/comp_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>
</LinearLayout>
