<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#3C3C3C"
    android:orientation="vertical">
<LinearLayout
android:id="@+id/box"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="2dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:layout_marginTop="5dp"
android:padding="4dp"
android:background="@drawable/field_background"
android:gravity="center_vertical"
android:orientation="horizontal">
<ImageView
android:layout_width="25dp"
android:layout_height="25dp"
android:src="@drawable/box"
android:scaleType="fitCenter"
android:tint="#FFFFB300" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:paddingBottom="3dp"
android:text="@string/box_body"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout
android:id="@+id/circle"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="2dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:padding="4dp"
android:background="@drawable/field_background"
android:gravity="center_vertical"
android:orientation="horizontal">
<ImageView
android:focusable="false"
android:layout_width="25dp"
android:layout_height="25dp"
android:src="@drawable/circle"
android:scaleType="fitCenter"
android:tint="#FFFFB300" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:paddingBottom="3dp"
android:text="@string/circle_body"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout
android:id="@+id/text"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="2dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:padding="4dp"
android:background="@drawable/field_background"
android:gravity="center_vertical"
android:orientation="horizontal">
<ImageView
android:layout_width="25dp"
android:layout_height="25dp"
android:src="@drawable/txt_icon"
android:scaleType="fitCenter"
android:tint="#FFFFB300" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:text="@string/text_item"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#FFFFFF" />
</LinearLayout>
<LinearLayout
android:id="@+id/joystick"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="2dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:padding="4dp"
android:background="@drawable/field_background"
android:gravity="center_vertical"
android:orientation="horizontal">
<ImageView
android:layout_width="25dp"
android:layout_height="25dp"
android:src="@drawable/joystick"
android:scaleType="fitCenter"
android:tint="#FFFFB300" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:text="@string/joystick_item"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#FFFFFF" />
</LinearLayout>
<LinearLayout
android:id="@+id/progress"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="5dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:padding="4dp"
android:background="@drawable/field_background"
android:gravity="center_vertical"
android:orientation="horizontal">
<ImageView
android:layout_width="25dp"
android:layout_height="25dp"
android:src="@drawable/progress"
android:scaleType="fitCenter"
android:tint="#FFFFB300" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:paddingBottom="3dp"
android:text="@string/progress_item"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#FFFFFF" />
</LinearLayout>
</LinearLayout>