<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
<LinearLayout
android:id="@+id/linear1"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingLeft="8dp"
android:paddingTop="3dp"
android:paddingRight="8dp"
android:paddingBottom="3dp"
android:background="#3C3C3C"
android:orientation="horizontal">
<ImageView
android:id="@+id/imageview1"
android:layout_width="45dp"
android:layout_height="match_parent"
android:src="@drawable/icon"
android:scaleType="fitCenter" />
<TextView
android:id="@+id/textview1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="8dp"
android:text="@string/error_send"
android:textSize="12sp"
android:textStyle="bold"
android:textColor="#ECEFF1" />
</LinearLayout>
<ScrollView
android:id="@+id/vscroll1"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="2dp"
android:background="#F44336"
android:layout_weight="1">
<TextView
android:id="@+id/textview2"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="8dp"
android:background="#3C3C3C"
android:text="TextView"
android:textSize="14sp"
android:textStyle="bold"
android:textColor="#ECEFF1"
android:textIsSelectable="true" />
</ScrollView>
<LinearLayout
android:id="@+id/linear2"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="2dp"
android:background="#FFB300"
android:orientation="horizontal">
<Button
android:id="@+id/button1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="2dp"
android:padding="8dp"
android:background="#4F4F4E"
android:text="@string/contact"
android:textSize="12sp"
android:textColor="#ECEFF1"
android:layout_weight="1" />
<Button
android:id="@+id/button2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="8dp"
android:background="#4F4F4E"
android:text="@string/copy"
android:textSize="12sp"
android:textColor="#ECEFF1"
android:layout_weight="1" />
</LinearLayout>
</LinearLayout>