<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#3C3C3C"
		android:gravity="center_horizontal"
		android:orientation="horizontal">
		<LinearLayout
			android:id="@+id/linear8"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/out"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="12dp"
				android:background="#1E1E1E"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical">
				<TextView
					android:id="@+id/textview1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_horizontal|center_vertical"
					android:text="@string/result"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="#FFFFFF" />
				<LinearLayout
					android:id="@+id/linear2"
					android:layout_width="130dp"
					android:layout_height="wrap_content"
					android:padding="3dp"
					android:background="#4F4F4E"
					android:gravity="center_vertical"
					android:orientation="horizontal">
					<LinearLayout
						android:id="@+id/result"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:layout_margin="3dp"
						android:background="@drawable/ic_theaters_black"
						android:src="@drawable/ic_theaters_black"
						android:scaleType="fitCenter" />
					<ImageView
						android:id="@+id/refresh"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginRight="5dp"
						android:src="@drawable/reset"
						android:scaleType="fitCenter" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear9"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_marginBottom="12dp"
				android:padding="2dp"
				android:background="#4F4F4E"
				android:orientation="vertical">
				<TextView
					android:id="@+id/textview4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:gravity="center_horizontal|center_vertical"
					android:text="@string/frame_duration"
					android:textSize="10sp"
					android:textStyle="bold"
					android:textColor="#ECEFF1" />
				<EditText
					android:id="@+id/edittext1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#3C3C3C"
					android:gravity="center_horizontal|center_vertical"
					android:text="450.0"
					android:textSize="12sp"
					android:textColor="#FFFFFF"
					android:hint="Duration"
					android:textColorHint="#CFD8DC"
					android:singleLine="true"
					android:inputType="phone" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear5"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:baselineAligned="false" android:orientation="horizontal">
			<LinearLayout
				android:id="@+id/linear6"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:padding="2dp"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/textview2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#1E1E1E"
					android:text="@string/your_images"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="#FFFFFF" />
				<ListView
					android:id="@+id/listview1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:dividerHeight="0dp"
					android:divider="@null"
					android:choiceMode="none" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear7"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginLeft="2dp"
				android:padding="2dp"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/textview3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#1E1E1E"
					android:text="@string/animation_pictures"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="#FFFFFF" />
				<ListView
					android:id="@+id/animationsList"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="2dp"
					android:choiceMode="none" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
